# AIBingoSlop

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
aibingoslop/: bingo.py  cli.py  utils.py
examples/: AIStartup.txt
